import React from 'react';
import '@testing-library/jest-dom';
import { shallow } from 'enzyme';
import { GifGrid } from '../../components/GifGrid';
import { useFetchGifs } from '../../hooks/useFetchGifs';
jest.mock('../../hooks/useFetchGifs');


describe('Pruebas de <GifGrid />', () => {

    const category = 'Harry Potter';
    test('Debe mostrase correctamente', () => {
        useFetchGifs.mockReturnValue({
            data: [],
            loading: true
        });

       const  wrapper = shallow( <GifGrid category={category}/> );
        expect(wrapper).toMatchSnapshot();
    })

    test('debe de mostrar items cuando se cargan imagen useFetchGifs', () => {
        const gifs = [{
            id: 'ABCD',
            url: 'htpps://localhost/cualquiera/cosa.jpg',
            title: 'Cualquier cosa'
        }]
        useFetchGifs.mockReturnValue({
            data: gifs,
            loading: false
        });

        const  wrapper = shallow( <GifGrid category={category}/> );
        expect(wrapper).toMatchSnapshot();
        expect(wrapper.find('p').exists()).toBe(false);
        expect(wrapper.find('GifGridItem').length).toBe(gifs.length);

        
    })

  
        
    
    
    
    

})