// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas de <GifGrid /> Debe mostrase correctamente 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Harry Potter
     
  </h3>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Pruebas de <GifGrid /> debe de mostrar items cuando se cargan imagen useFetchGifs 1`] = `
<Fragment>
  <h3
    className="animate__animated animate__fadeIn"
  >
     
    Harry Potter
     
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABCD"
      key="ABCD"
      title="Cualquier cosa"
      url="htpps://localhost/cualquiera/cosa.jpg"
    />
  </div>
</Fragment>
`;
